fixato gap footer

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ header{
 
 .action-left, .action-center, .action-right{
     display: flex;
-    column-gap: 20px;
+    column-gap: 40px;
     
 }
 .action-box{
